[package]
name = "hashfn"
version = "0.2.0"
edition = "2018"
authors = ["Tyrone Tudehope <tyrone@bushcraft.dev>"]
license = "MIT OR Apache-2.0"
description = "A procedural macro to generate a hash representation of a function as a string slice"
repository = "https://github.com/johnnynotsolucky/hashfn"
documentation = "https://docs.rs/hashfn"
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
sha2 = "0.10.2"
syn = { version = "1.0.93", features = ["full"] }
